# current-density-inversion

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
data/: README.md
docs/: agent_coding_playbook.md  agent_workflow.md  evidence_package_contract.md  reproducibility.md  research_graph_design.md
docs/algorithm_blueprints/: E20_round2_epsilon_multistate_directive.md  E20_round3_truth_coverage_directive.md  E20_round4_regularized_consistent_set_directive.md  E20_round5_pairwise_margin_active_design_directive.md  E21_external_solver_operator_gap_ladder.md  E21_round2_pypeec_decision_instability_directive.md  E21_round3_nonlinear_report_fix_directive.md  E21_round4_ridge_evidence_scorer_directive.md  E21_round5_multibasis_operator_gap_certificate_directive.md  E23_cad_gds_graph_hodge_basis.md  README.md  (+15 more)
outputs/: full_run_audit.md
research_graph/: README.md  agent_queue.yml  artifacts.yml  claims.yml  evidence_edges.yml  evidence_inventory.md  experiments.yml  nodes.yml  open_questions.md  overclaim_guardrails.md  update_log.md
scripts/: agent_audit.py  agent_next.py  audit_claim.py  audit_evidence_package.py  audit_old_new_experiment_coverage.py  changed_claims.py  check_claim_gates.py  check_evidence_outputs.py  check_metrics_schema.py  check_no_leakage.py  new_claim.py  new_evidence.py  normalize_metrics_metadata.py  prepare_agent_context.py  render_claim_matrix.py  run_evidence.py  scaffold_evidence.py  validate_agent_readiness.py  validate_graph.py
tests/: test_graph_integrity.py
(+951 files in other folders)
