[project]
name = "magnetic-system-identification-ssot"
version = "0.1.0"
description = "Claim-centered research graph SSOT for magnetic system identification."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

